Swagger  contract for two services
